# asteroids

./: CMakeLists.txt  Makefile
src/: asteroid.c  asteroid.h  asteroids.c  asteroids.h  main.c  player.c  player.h  trace.c  trace.h  window.h
